# meal-prep

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
backend/: database.py  main.py  migrations.py  pyproject.toml  requirements.txt
backend/data/: usda_prices.json
backend/models/: models.py
backend/routes/: chat.py  email.py  files.py  goals.py  ingest.py  meals.py  profile.py  recipes.py  scan.py
backend/services/: agent.py  apify_walmart.py  claude.py  embeddings.py  file_gen.py  grocery.py  kroger.py  pricing.py  resend.py  spoonacular.py  usda.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: chat.ts  files.ts  goals.ts  ingest.ts  meals.ts  profile.ts  recipes.ts  scan.ts
frontend/src/components/: BudgetTracker.tsx  ChatPanel.tsx  FridgeScanner.tsx  GroceryList.tsx  MacroSummary.tsx  RecipeCard.tsx  WeeklyPlanner.tsx
frontend/src/pages/: Chat.tsx  Goals.tsx  Planner.tsx  Profile.tsx  Scanner.tsx
