[project]
name = "meal-prep-backend"
version = "0.1.0"
description = "FastAPI backend for the Meal Prep personal meal planner"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.35",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-multipart==0.0.12",
    "httpx==0.27.2",
    "anthropic==0.34.2",
    "apscheduler==3.10.4",
    "resend==2.4.0",
    "python-dotenv==1.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
